--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>A2 / GS7 / Personalpronomen Dativ oder Akkusativ</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,16 +12,19 @@
 <h1>Personalpronomen Dativ oder Akkusativ</h1>
 <p id="taskExplanation">Setzen Sie das richtige Dativ- (dir / Ihnen) oder Akkusativpronomen (dich / Sie) ein.</p>
 
-<div class="cards-container" id="cardsContainer"></div>
-<div class="fireworks" id="fireworks">🎆✨ Alles richtig! ✨🎆</div>
+<div class="cards-container grid-mode" id="cardsContainer"></div>
+  <div class="fireworks" id="fireworks">🎆✨ Alles richtig! ✨🎆</div>
 
-<footer>
-  <p>
-    Digitalisiert von Anne Felgentreu.<br>
-    Inhalte basierend auf: Klepsch, C. (2017). <em>Schritte Plus neu 3+4 A2. Deutsch als Zweitsprache: Spielesammlung.</em> München: Hueber Verlag.
-  </p>
-</footer>
+  <footer class="footer">
+    <p>
+      Digitalisiert von Anne Felgentreu – optimiert mit Unterstützung von Yevhenii Airapetian<br>
+      Inhalte basierend auf: Klepsch, C. (2017). <em>Schritte Plus neu 3+4 A2. Deutsch als Zweitsprache: 
+        Spielesammlung.</em> München: Hueber Verlag.
+    </p>
+  </footer>
+  <button id="toggleLayoutBtn">🗂️ Stapeln</button>
 
-<script src="script.js" defer></script>
+  <script src="script.js" defer></script>
 </body>
+
 </html>
